# FFMpegSample

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lyman/ffmpegsample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio_stream.aac  output.h265  pic.rgb  s16le.pcm  yuv420p.yuv
app/src/main/cpp/: BasicDataType.cpp  BasicFFMpeg.cpp  FLVData.cpp  MP4Data.cpp
app/src/main/cpp/base/: Base.cpp  Base.h
app/src/main/cpp/basicdatatype/: BasicDataType.cpp  BasicDataType.h  FLVData.cpp  FLVData.h  MP4Data.cpp  MP4Data.h
app/src/main/cpp/basicffmpeg/: AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  AudioFilter.cpp  AudioFilter.h  BasicFFMpeg.cpp  BasicFFMpeg.h  DeMuxing.cpp  DeMuxing.h  EncodeMuxing.cpp  EncodeMuxing.h  Muxing.cpp  Muxing.h  Resample.cpp  Resample.h  SwScale.cpp  SwScale.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h  VideoFilter.cpp  VideoFilter.h
app/src/main/cpp/include/: Base.h  BasicDataType.h  BasicFFMpeg.h  FLVData.h  MP4Data.h
app/src/main/java/com/lyman/ffmpegsample/: MainActivity.kt
app/src/main/java/com/lyman/ffmpegsample/adapter/: MyRecyclerViewAdapter.kt
app/src/main/java/com/lyman/ffmpegsample/controller/: BasiDateTypeJNI.kt  BasicDataTypeJNI.kt  BasicFFMpegJNI.kt
app/src/main/java/com/lyman/ffmpegsample/fragment/: BaseFragment.kt  BasicDataTypeFormatConversionFragment.kt  BasicDataTypeFragment.kt  BasicDataTypePCMFragment.kt  BasicDataTypeRGBFragment.kt  BasicDataTypeYUVFragment.kt  BasicFFMpegFragment.kt  EncodeFragment.kt  MainFragment.kt
app/src/main/java/com/lyman/ffmpegsample/fragment/basicdatatype/: BasicDataTypeFormatConversionFragment.kt  BasicDataTypeFragment.kt  BasicDataTypePCMFragment.kt  BasicDataTypeRGBFragment.kt  BasicDataTypeYUVFragment.kt
app/src/main/java/com/lyman/ffmpegsample/fragment/basicffmpeg/: BasicFFMpegAvFilterFragment.kt  BasicFFMpegAvcodecFragment.kt  BasicFFMpegAvdeviceFragment.kt  BasicFFMpegEncapsulationFormatFragment.kt  BasicFFMpegFragment.kt  BasicFFMpegSwresampleFragment.kt  BasicFFMpegSwscaleFragment.kt
app/src/main/res/layout/: activity_main.xml  fragment_basic_ffmpeg.xml  item_recyclerview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lyman/ffmpegsample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
